[tool.poetry]
name = "py-ansible-sandbox"
version = "0.1.0"
description = ""
authors = ["JC Guerrero <JCystems@gMail.com>"]
readme = "README.md"
packages = [{include = "py_ansible_sandbox"}]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
