[tool.poetry]
name = "py-ansible-sandbox"
version = "0.1.0"
description = ""
authors = ["JC Guerrero <JCystems@gMail.com>"]
readme = "README.md"
packages = [{include = "py_ansible_sandbox"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
